--- a/geog176A.rmd
+++ b/geog176A.rmd
@@ -1,33 +1,39 @@
 ---
 title: 'Projects'
 ---
-This is my projects section for Geography 176A. This is my first attempt at building a website using RStudio and GitHub.
+### This is my projects section for Geography 176A. 
 
 
 ##### Lab 1 learning points:
 
-  - create a new repository on GitHub
-  - using a yml file to give R directions on how to assemble a website
-  - using R Markdown to add information 
-  - knitting it to a webpage
+  - In this lab we creatd a new repository in Github and used Rmd and yml files to create the outline for this webpage.
+  - yml files give directions to R on how to assemble a website
+  - R Markdown adds information to the website
+  - After making changes in an Rmd, knitting the file will submit the changes to the website.
+
+
 
 
 [Lab 2: Data Wrangling](https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html)
 
 ##### Learning points:
 
+  - In this lab we sourced data from the NY Times on the COVID-19 pandemic in USA, we then explored this data with a data science approach
   - reading in data using readr
   - Dplyer verbs(select, filter, mutate, group_by, summarize, arrange)
   - join functions to combine data sets 
-  - knitr::kable and pull()
+  - using Knitr to create clean tables 
   - calculate number of New cases using lag()
   - ggplot (add data, layers, labels, themes, facets)
   - testing 'message = FALSE, warning = FALSE, eval = FALSE, echo = FALSE in R Markdown
+
+
 
 [Lab 3: Projections, Distances, and Mapping](https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html)
 
 ##### Learning points:
 
+  - In this lab we worked US cities and borders as Sf objects to perform spatial analysis on the USA
   - using Sf package:
     - st_as_sf to create a special feature object from a data fram
     - st_transform to change CRS from angular measurements to meters
@@ -37,12 +43,15 @@ This is my projects section for Geography 176A. This is my first attempt at buil
     - drop_units()
   - assigning labels to specified points on plot
   
+  
+  
 [Lab 4: Tesselations, Spatial Joins, and Point-in-Polygon](https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html)
 
 ##### Learning points:
 
+  - In this lab we formed tessellations over the US and then performed PIP analysis on dam locations.
   - generated centroids as anchor points for tessellations
-    - st_as_sf to create a special feature object from a data fram
+    - st_as_sf to create a special feature object from a data frame
     - st_transform to change CRS from angular measurements to meters
     - st_distance to calculate the distance from points to Multilinestrings
   - Tessellations:
@@ -57,10 +66,13 @@ This is my projects section for Geography 176A. This is my first attempt at buil
   - Point-in-polygon analysis
 
 
+
+
 [Lab 05: Rasters analysis and Remote Sensing](https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html)
 
 ##### Learning points:
 
+  - In this lab we worked with rasters, RGB color varients, landsat images, and kmeans analysis to visualize regions were flooding has occurred.
   - create rasters
     - raster stacks and raster bricks
     - bounty boxes
@@ -70,10 +82,14 @@ This is my projects section for Geography 176A. This is my first attempt at buil
   - Applying thresholds to raster images
   - kmeans analysis
 
+
+
+
 [Lab 6: Terrain Analysis](https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html)
 
 ##### Learning points:
 
+  - In this lab we used OSM to locate buildings and streams and then we used Whitebox tools to analyze the terrain in the region.
   - Open Street Map
     - Performed Overpass queries on key, tag combinations
     - Extracted polygon and lines features from OSM database
