--- a/index.Rmd
+++ b/index.Rmd
@@ -1,18 +1,39 @@
 ---
-title: "About me:"
+title: "About me"
+output:
+  mikedown::ucsb:
+    toc: TRUE
+    number_sections: FALSE
+    code_folding: "hide"
 ---
+```{r, message= FALSE, warning = FALSE, echo = FALSE}
+library(tidyverse)
+library(rmarkdown)     # You need this library to run this template.
+library(mikedown)   
+```
 
-My name is Angus Watters and I am senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am proficient in both R and Python and able to work with large data sets to perform statistical and data analysis. I am interested in working in the field of water resources and environmental conservation. 
+***
+<br>
 
-I am 23 years old and was born and raised in Santa Barbara, California. My interests include running, biking, art, computer science, and GIS. 
+### Welcome to my website, my name is Angus Watters! 
+
+***
+
+  I am senior majoring in Geography with an emphasis on GIS at the University of California, Santa Barbara with an expected graduation date of Spring 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.
+  
+  As I near graduation, I am searching for opportunities where I can both apply and improve my skills in  cleaning, organizing, and analyzing spatial and non-spatial data.  I hope to find a position which matches my interest in environmental conservation, resource management, and data curation. 
+  
+  Some of my outside interests include running, biking, art, gardening, and cooking.
+
+***  
 
 Email: adwattersgrubstein@umail.ucsb.edu
 
+
 GitHub: https://github.com/anguswg-ucsb
 
+<br>
 
-
-
-
-
-![](img/UCSB-about-me.jpg)
+<center>
+![](UCSB-about-me.jpg)
+</center>
