--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "About me"
 output:
-  html_document:
-    includes:
-      after_body: footer.html
+  mikedown::ucsb:
+    toc: TRUE
+    number_sections: FALSE
+    code_folding: "hide"
 ---
 ```{r, message= FALSE, warning = FALSE, echo = FALSE}
 library(tidyverse)
