--- a/CV.rmd
+++ b/CV.rmd
@@ -1,10 +1,5 @@
 ---
 title: 'Resume'
-output:
-  mikedown::ucsb:
-    toc: TRUE
-    number_sections: FALSE
-    code_folding: "hide"
 ---
 ```{r, message= FALSE, warning = FALSE, echo = FALSE}
 library(tidyverse)
@@ -32,18 +27,18 @@ library(mikedown)
 
 ***
   
-  - #### SORAA INC. Goleta, CA, *Intern* (**Spring 2015**)
+  - #### **SORAA INC.** Goleta, CA, *Intern* **(Spring 2015)**
     - Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs to pinpoint specific points in the reaction
   
-  - #### THE GARDEN MARKET Carpinteria, CA *Cashier & Server* (**2017**)
+  - #### **THE GARDEN MARKET** Carpinteria, CA *Cashier & Server* **(2017)**
     - Provided friendly and efficient customer service; striving to give customers a positive dining experience by attending to their needs promptly and enthusiastically 
   
-  - #### GALLUP & STRIBLING ORCHIDS Carpinteria, CA *Sales Representative* (**2018**)
+  - #### **GALLUP & STRIBLING ORCHIDS** Carpinteria, CA *Sales Representative* **(2018)**
     -	Provided exceptional customer service while processing phone orders
     -	Provided support during hectic Mother’s Day season
     -	Collaborated with the flower production floor and truck drivers receiving orders, maintaining clear communication between all parties
   
-  - #### SANTA BARBARA RUNNING Santa Barbara, CA, *Sales Representative* (**2019 - present**)
+  - #### **SANTA BARBARA RUNNING** Santa Barbara, CA, *Sales Representative* **(2019 - present)**
     -	Provided information and options on shoes based on an individual’s goals and needs 
     -	During busy hours, I comfortably multitask, ensuring each customer’s requests are acknowledged and attended to
 
@@ -52,10 +47,10 @@ library(mikedown)
 
 ***
 
-  - #### LAGUNA BLANCA SPORTS DRIVE,  *Organizer* (**2011-2015**)
+  - #### **LAGUNA BLANCA SPORTS DRIVE**  *Organizer* **(2011-2015)**
     -	Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys & Girls Club 
   
-  - #### SANTA BARBARA FOODBANK’S BACKYARD BOUNTY, *Community Outreach & volunteer fundraiser* (**2014 – 2018**)
+  - #### **SANTA BARBARA FOODBANK’S BACKYARD BOUNTY** *Community Outreach & volunteer fundraiser* **(2014 – 2018)**
     -	tasked with leading groups into local residences to harvest fruits and vegetables which are then distributed back to the community by the Foodbank
 
 ***
@@ -64,12 +59,13 @@ library(mikedown)
 
 ***
 
-  - #### UNIVERSITY OF CALIFORNIA, SANTA BARBARA – (**2019 – present | Expected graduation Spring 2021**)
+  - #### **UNIVERSITY OF CALIFORNIA, SANTA BARBARA –** (2019 – present | Expected graduation Spring 2021)
     - ##### *B.A. in Geography with an Emphasis in Geographic Information Science (GPA:  3.62/4.0)*
 		
-  - #### SANTA BARBARA CITY COLLEGE – (**2016- 2018**)	
+  - #### **SANTA BARBARA CITY COLLEGE –** (2016- 2018)	
 
-  - #### LAGUNA BLANCA SCHOOL – (**Graduated 2015**)
+  - #### **LAGUNA BLANCA SCHOOL –** (Graduated 2015)
+<br>
 
 ## **Skills + Additional Interests**:
 
