--- a/CV.rmd
+++ b/CV.rmd
@@ -16,46 +16,55 @@ library(mikedown)
 
 <br>
 
-## **Work Objective**:
+## **Work Objective**
 
 ***
 
 #### I am a senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.
 
 
-## **Experience:**
+## **Experience**
 
 ***
-  
-  - #### **SORAA INC.** Goleta, CA, *Intern* **(Spring 2015)**
-    - Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs to pinpoint specific points in the reaction
-  
-  - #### **THE GARDEN MARKET** Carpinteria, CA *Cashier & Server* **(2017)**
-    - Provided friendly and efficient customer service; striving to give customers a positive dining experience by attending to their needs promptly and enthusiastically 
-  
+
+  - #### **SANTA BARBARA RUNNING** Santa Barbara, CA, *Sales Representative* **(2019 - present)**
+    -	Provided information and options on shoes based on an individual’s goals and needs 
+    -	Comfortably multitask, ensuring optimal response to customers' requests
+
+<br>
+
   - #### **GALLUP & STRIBLING ORCHIDS** Carpinteria, CA *Sales Representative* **(2018)**
     -	Provided exceptional customer service while processing phone orders
     -	Provided support during hectic Mother’s Day season
     -	Collaborated with the flower production floor and truck drivers receiving orders, maintaining clear communication between all parties
-  
-  - #### **SANTA BARBARA RUNNING** Santa Barbara, CA, *Sales Representative* **(2019 - present)**
-    -	Provided information and options on shoes based on an individual’s goals and needs 
-    -	During busy hours, I comfortably multitask, ensuring each customer’s requests are acknowledged and attended to
+
+<br>
+
+  - #### **THE GARDEN MARKET** Carpinteria, CA *Cashier & Server* **(2017)**
+    - Provided friendly and efficient customer service; striving to give customers a positive dining experience by attending to their needs promptly and enthusiastically 
+
+<br>
+
+  - #### **SORAA INC.** Goleta, CA, *Intern* **(Spring 2015)**
+    - Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs to pinpoint specific points in the reaction
+
+<br>
 
 
-## **Volunteering Experience**:
+## **Volunteer Experience**
 
 ***
+
+  - #### **SANTA BARBARA FOODBANK’S BACKYARD BOUNTY** *Community Outreach & volunteer fundraiser* **(2014 – 2018)**
+    -	tasked with leading groups into local residences to harvest fruits and vegetables which are then distributed back to the community by the Foodbank
 
   - #### **LAGUNA BLANCA SPORTS DRIVE**  *Organizer* **(2011-2015)**
     -	Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys & Girls Club 
   
-  - #### **SANTA BARBARA FOODBANK’S BACKYARD BOUNTY** *Community Outreach & volunteer fundraiser* **(2014 – 2018)**
-    -	tasked with leading groups into local residences to harvest fruits and vegetables which are then distributed back to the community by the Foodbank
 
 ***
 
-## **Education**:
+## **Education**
 
 ***
 
@@ -67,7 +76,7 @@ library(mikedown)
   - #### **LAGUNA BLANCA SCHOOL –** (Graduated 2015)
 <br>
 
-## **Skills + Additional Interests**:
+## **Skills + Additional Interests**
 
 ***
 
@@ -78,12 +87,12 @@ library(mikedown)
 
 ***
 
-## **References**:
+## **References**
 
 ***
   - Mike Johnson, UCSB phD candidate, instructor in R Spatial analysis - jmj00@ucsb.edu
   - Joe DeVreese, Santa Barbara Running – (805) 729-0138
   - Sherrie Todd, The Garden Market – (805) 708-6428
   - Wayne Shizuman, Gallup & Stribling Orchids LLC  – wayne@gallup-stribling.com – (805) 620-8443  
-  - Cate Hogan, Liv. Rip. Waterfowl Conservancy – chogan@lrwc.net  – (860) 567-2062
+  - Cate Hogan, Ripley Waterfowl Conservancy – chogan@ripleyconservancy.org  – (860) 567-2062
   - Alexa Senter, Backyard Bounty – (805) 403-8327
